phpDivingLog v3.0-alpha3 - 2011-09-11 - Lloyd Borrett and Rob Lensen
    * Added tabs to dive details and dive statistics pages 
    * Modified the calculation of imperial cylinder size to use working pressure if available
    * Added Active to equipment overview listing
    * Fixed formatting issues
    * Fixed some bugs
    * Added TODO file so we have an overview what has to be done
    * Changed the parse_mysql query function so if just one result is there don't create an array
    * Added the Divesite name to the gallery
    * Added EXIF information to the dive photos
    * Added display of dive shops/centres, trips/vacations and countries
    * Made URLs and email addresses in dive/site/equipment/shop/trip comments clickable
    * Added display of cylinder and supply type statistics
    * Added display of multiple cylinder sets to dive details breathing tab
    * Added calculation of END for Trimix dives
    * Added pic indicator to equipment, shop and trip overview listings
    * Added icons to equipment active/inactive fields

phpDivingLog v3.0-alpha2 - 2011-08-01 - Lloyd Borrett
    * Added ability to display lots of additional values 
    *   on the dive details, dive sites and dive equipment pages
    * Added ability to show visibilty type as a set of images
    * Added ability to show the dive site ratings as a set of images
    * Added images to show if single or twin cylinders being used
    * Added images to show if supply type is OC, SCR or CCR 
    * Added default values for maxPPO2, O2 and datum
    * Added in calculated values for MOD, EAD and exit time
    * Added in display of an image for the back gas type
    * Fixed some formatting issues

phpDivingLog v3.0-alpha1 - 2011-07-24 - Lloyd Borrett
    * Added ability to display photo descriptions on more images
    * Ability to set the width and height of the thumbnails which is then used to display them
    * Display program version and database version on statistics page