@@ -64,10 +64,10 @@
       {foreach from=$sites item=site}
         {if isset($multiuser_id)}
         <a href="{$app_path}/divesite.php{$sep1}{$multiuser_id}{$sep2}{$site}"
-title="{$dsite_number_title}{$site}">{$site}</a>
+title="{$dsite_number_title}{$site}">{$site}</a>{if !$site@last}{if $comma_separated},{else}&nbsp;{/if}{/if}
         {else}
         <a href="{$app_path}/divesite.php{$sep2}{$site}"
-title="{$dsite_number_title}{$site}">{$site}</a>
+title="{$dsite_number_title}{$site}">{$site}</a>{if !$site@last}{if $comma_separated},{else}&nbsp;{/if}{/if}
         {/if}
       {/foreach}
       </td>
@@ -85,10 +85,10 @@ title="{$dsite_number_title}{$site}">{$site}</a>
       {foreach from=$dives item=dive}
         {if isset($multiuser_id)}
         <a href="{$app_path}/index.php{$sep1}{$multiuser_id}{$sep2}{$dive}"
-title="{$dlog_number_title}{$dive}">{$dive}</a>
+title="{$dlog_number_title}{$dive}">{$dive}</a>{if !$dive@last}{if $comma_separated},{else}&nbsp;{/if}{/if}
         {else}
         <a href="{$app_path}/index.php{$sep2}{$dive}"
-title="{$dlog_number_title}{$dive}">{$dive}</a>
+title="{$dlog_number_title}{$dive}">{$dive}</a>{if !$dive@last}{if $comma_separated},{else}&nbsp;{/if}{/if}
         {/if}
       {/foreach}
       </td>
