@@ -108,10 +108,10 @@
       {foreach from=$trips item=trip}
         {if isset($multiuser_id)}
         <a href="{$app_path}/divetrip.php{$sep1}{$multiuser_id}{$sep2}{$trip}"
-title="{$dtrip_number_title}{$trip}">{$trip}</a>
+title="{$dtrip_number_title}{$trip}">{$trip}</a>{if !$trip@last}{if $comma_separated},{else}&nbsp;{/if}{/if}
         {else}
         <a href="{$app_path}/divetrip.php{$sep2}{$trip}"
-title="{$dtrip_number_title}{$trip}">{$trip}</a>
+title="{$dtrip_number_title}{$trip}">{$trip}</a>{if !$trip@last}{if $comma_separated},{else}&nbsp;{/if}{/if}
         {/if}
       {/foreach}
       </td>
@@ -129,10 +129,10 @@ title="{$dtrip_number_title}{$trip}">{$trip}</a>
       {foreach from=$dives item=dive}
         {if isset($multiuser_id)}
         <a href="{$app_path}/index.php{$sep1}{$multiuser_id}{$sep2}{$dive}"
-title="{$dlog_number_title}{$dive}">{$dive}</a>
+title="{$dlog_number_title}{$dive}">{$dive}</a>{if !$dive@last}{if $comma_separated},{else}&nbsp;{/if}{/if}
         {else}
         <a href="{$app_path}/index.php{$sep2}{$dive}"
-title="{$dlog_number_title}{$dive}">{$dive}</a>
+title="{$dlog_number_title}{$dive}">{$dive}</a>{if !$dive@last}{if $comma_separated},{else}&nbsp;{/if}{/if}
         {/if}
       {/foreach}
       </td>
