@@ -1,4 +1,4 @@
-phpDivingLog v3.0-alpha3 - 2011-09-11 - Lloyd Borrett and Rob Lensen
+phpDivingLog v3.0-alpha3 - 2011-09-25 - Lloyd Borrett and Rob Lensen
     * Added tabs to dive details and dive statistics pages 
     * Modified the calculation of imperial cylinder size to use working pressure if available
     * Added Active to equipment overview listing
@@ -15,6 +15,8 @@ phpDivingLog v3.0-alpha3 - 2011-09-11 - Lloyd Borrett and Rob Lensen
     * Added calculation of END for Trimix dives
     * Added pic indicator to equipment, shop and trip overview listings
     * Added icons to equipment active/inactive fields
+    * Added display of user-defined fields to dive details
+    * Comma separation of lists as a configuration option
 
 phpDivingLog v3.0-alpha2 - 2011-08-01 - Lloyd Borrett
     * Added ability to display lots of additional values 
